latex2mmlc/tests/snapshots/wiki_test__wiki065.snap
---
source: latex2mmlc/tests/wiki_test.rs
expression: "\\precsim, \\precnsim, \\precapprox, \\precnapprox"
---
<math>
    <mo>≾</mo>
    <mo>,</mo>
    <mo>⋨</mo>
    <mo>,</mo>
    <mo>⪷</mo>
    <mo>,</mo>
    <mo>⪹</mo>
</math>
