latex2mmlc/tests/snapshots/wiki_test__wiki066.snap
---
source: latex2mmlc/tests/wiki_test.rs
expression: "\\succsim, \\succnsim, \\succapprox, \\succnapprox"
---
<math>
    <mo>≿</mo>
    <mo>,</mo>
    <mo>⋩</mo>
    <mo>,</mo>
    <mo>⪸</mo>
    <mo>,</mo>
    <mo>⪺</mo>
</math>
