latex2mmlc/tests/snapshots/wiki_test__wiki068.snap
---
source: latex2mmlc/tests/wiki_test.rs
expression: "\\perp, \\angle, \\sphericalangle, \\measuredangle, 45^\\circ"
---
<math>
    <mo>⟂</mo>
    <mo>,</mo>
    <mi>∠</mi>
    <mo>,</mo>
    <mi>∢</mi>
    <mo>,</mo>
    <mi>∡</mi>
    <mo>,</mo>
    <msup>
        <mn>45</mn>
        <mo>∘</mo>
    </msup>
</math>
