latex2mmlc/tests/snapshots/wiki_test__wiki071.snap
---
source: latex2mmlc/tests/wiki_test.rs
expression: "\\vartriangle, \\triangledown"
---
<math>
    <mo>△</mo>
    <mo>,</mo>
    <mo>▽</mo>
</math>
