latex2mmlc/tests/snapshots/wiki_test__wiki072.snap
---
source: latex2mmlc/tests/wiki_test.rs
expression: "\\blacktriangle, \\blacktriangledown, \\blacktriangleleft, \\blacktriangleright"
---
<math>
    <mi>▲</mi>
    <mo>,</mo>
    <mi>▼</mi>
    <mo>,</mo>
    <mi>◀</mi>
    <mo>,</mo>
    <mi>▶</mi>
</math>
