latex2mmlc/tests/snapshots/wiki_test__wiki073.snap
---
source: latex2mmlc/tests/wiki_test.rs
expression: "\\forall, \\exists, \\nexists"
---
<math>
    <mo>∀</mo>
    <mo>,</mo>
    <mo>∃</mo>
    <mo>,</mo>
    <mo>∄</mo>
</math>
