latex2mmlc/tests/snapshots/wiki_test__wiki074.snap
---
source: latex2mmlc/tests/wiki_test.rs
expression: "\\therefore, \\because, \\And"
---
<math>
    <mo>∴</mo>
    <mo>,</mo>
    <mo>∵</mo>
    <mo>,</mo>
    <mo>&amp;</mo>
</math>
