latex2mmlc/tests/snapshots/wiki_test__wiki075.snap
---
source: latex2mmlc/tests/wiki_test.rs
expression: "\\lor \\vee, \\curlyvee, \\bigvee"
---
<math>
    <mo>∨</mo>
    <mo>∨</mo>
    <mo>,</mo>
    <mo>⋎</mo>
    <mo>,</mo>
    <mo>⋁</mo>
</math>
