latex2mmlc/tests/snapshots/wiki_test__wiki076.snap
---
source: latex2mmlc/tests/wiki_test.rs
expression: "\\land \\wedge, \\curlywedge, \\bigwedge"
---
<math>
    <mo>∧</mo>
    <mo>∧</mo>
    <mo>,</mo>
    <mo>⋏</mo>
    <mo>,</mo>
    <mo>⋀</mo>
</math>
